--- a/files/default-settings.json
+++ b/files/default-settings.json
@@ -38,7 +38,7 @@
         ],
         "optionalFiles": [
             "/bin/raidz_test",
-            "/bin/zgenhostid",
+            "/sbin/zgenhostid",
             "/bin/zvol_wait",
             "/sbin/zdb",
             "/sbin/zfs_ids_to_path",
